--- a/source/src/store-front/sonar-project.properties
+++ b/source/src/store-front/sonar-project.properties
@@ -1,2 +1,4 @@
-sonar.projectKey=store-front-service
-sonar.projectName=Microservice/store-front-service
+sonar.projectKey=store-front_service
+sonar.projectName=Microservice-StoreFrontService
+sonar.sources=.
+
