--- a/source/src/store-front/package.json
+++ b/source/src/store-front/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --no-lint",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
